--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^10.1.2",
+    "cordova-plugin-device-motion": "^2.0.1",
+    "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-network-information": "^3.0.0",
+    "cordova-plugin-splashscreen": "^6.0.2",
     "wonderpush-cordova-sdk": "^3.2.5",
     "wonderpush-cordova-sdk-fcm": "^1.0.6"
   },
@@ -31,7 +35,13 @@
       },
       "wonderpush-cordova-sdk-fcm": {
         "SENDER_ID": "975832123305"
-      }
+      },
+      "cordova-plugin-device-motion": {},
+      "cordova-plugin-geolocation": {
+        "GPS_REQUIRED": "true"
+      },
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-splashscreen": {}
     }
   }
 }
